# houdini-launcher-rs

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: config.rs  houdini.rs  launch.rs  mod.rs  packages.rs  presets.rs  settings.rs
src-tauri/src/models/: mod.rs
src-tauri/src/utils/: config.rs
src/services/: api.ts
